[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/AdvancedLaboratory/feedback_cybernetics/FeedbackCybernetics.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1) * 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1) * 0.3

[node name="FeedbackCybernetics" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="ControlSystem" type="Node3D" parent="."]

[node name="InputNode" type="Node3D" parent="ControlSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="InputSphere" type="CSGSphere3D" parent="ControlSystem/InputNode"]
radius = 0.8
material = SubResource("StandardMaterial3D_2")

[node name="InputLabel" type="CSGBox3D" parent="ControlSystem/InputNode"]
size = Vector3(2, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material = SubResource("StandardMaterial3D_1")

[node name="ProcessNode" type="Node3D" parent="ControlSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="ProcessCube" type="CSGBox3D" parent="ControlSystem/ProcessNode"]
size = Vector3(2, 2, 2)
material = SubResource("StandardMaterial3D_1")

[node name="ProcessLabel" type="CSGBox3D" parent="ControlSystem/ProcessNode"]
size = Vector3(2, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material = SubResource("StandardMaterial3D_1")

[node name="OutputNode" type="Node3D" parent="ControlSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="OutputSphere" type="CSGSphere3D" parent="ControlSystem/OutputNode"]
radius = 0.8
material = SubResource("StandardMaterial3D_3")

[node name="OutputLabel" type="CSGBox3D" parent="ControlSystem/OutputNode"]
size = Vector3(2, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material = SubResource("StandardMaterial3D_1")

[node name="FeedbackLoop" type="Node3D" parent="ControlSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="FeedbackSphere" type="CSGSphere3D" parent="ControlSystem/FeedbackLoop"]
radius = 0.6
material = SubResource("StandardMaterial3D_2")

[node name="FeedbackLabel" type="CSGBox3D" parent="ControlSystem/FeedbackLoop"]
size = Vector3(2, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material = SubResource("StandardMaterial3D_1")

[node name="ConnectionLines" type="Node3D" parent="ControlSystem"]

[node name="InputToProcess" type="CSGCylinder3D" parent="ControlSystem/ConnectionLines"]
radius = 0.05
height = 8
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)
material = SubResource("StandardMaterial3D_2")

[node name="ProcessToOutput" type="CSGCylinder3D" parent="ControlSystem/ConnectionLines"]
radius = 0.05
height = 8
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)
material = SubResource("StandardMaterial3D_2")

[node name="OutputToFeedback" type="CSGCylinder3D" parent="ControlSystem/ConnectionLines"]
radius = 0.05
height = 8
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 4, -2, 0)
material = SubResource("StandardMaterial3D_3")

[node name="FeedbackToInput" type="CSGCylinder3D" parent="ControlSystem/ConnectionLines"]
radius = 0.05
height = 8
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, -4, -2, 0)
material = SubResource("StandardMaterial3D_3")

[node name="DataFlow" type="Node3D" parent="."]

[node name="DataParticles" type="Node3D" parent="DataFlow"]

[node name="SignalWaves" type="Node3D" parent="."]

[node name="Wave1" type="CSGSphere3D" parent="SignalWaves"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)
material = SubResource("StandardMaterial3D_2")

[node name="Wave2" type="CSGSphere3D" parent="SignalWaves"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)
material = SubResource("StandardMaterial3D_3")

[node name="Wave3" type="CSGSphere3D" parent="SignalWaves"]
radius = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
material = SubResource("StandardMaterial3D_2")

[node name="ControlParameters" type="Node3D" parent="."]

[node name="ParameterSlider" type="Node3D" parent="ControlParameters"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)

[node name="SliderBase" type="CSGBox3D" parent="ControlParameters/ParameterSlider"]
size = Vector3(8, 0.2, 0.5)
material = SubResource("StandardMaterial3D_1")

[node name="SliderIndicator" type="CSGSphere3D" parent="ControlParameters/ParameterSlider"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
